# Gravity

./: .codecov.yml  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  Arc.h  Box.cpp  Box.hpp  CMakeLists.txt  Clp.cpp  ClpProgram.hpp  GravityConfig.h.in  INSTALL.md  LICENCE.md  LICENSE  LICENSE.md  Minkmodel.cpp  Minkmodel.hpp  MkP_install.md  Node.cpp  Node.h  Node_edge.txt  PowerNet1.h  README.md  README_benchmarking.MD  README_boresight_alignment.MD  SDP.txt  SDP_comparison.txt  SDP_comparison.txt~  SDP_comparison50.txt  _config.yml  chordal.txt  exp.sh  get_code_cov.sh  ignore.supp  index.md  libcilkrts.5.dylib  libfusion64.8.1.dylib  libfusion64.dylib  libmosekscopt8_1.dylib  (+4 more)
ARMO/: ARMO.cpp  ARMO.hpp  CMakeLists.txt
data_sets/: txt
examples/: CMakeLists.txt  Gravity101_main.cpp  Gravity_test.cpp  README.md  Stable_Set.cpp
examples/AB-Crown/: CMakeLists.txt  MPSParser.cpp  MPSParser.hpp  mps_parser.cpp  simple.mps
examples/Classification/: DataSet.cpp  DataSet.h  NeuralNet.cpp  NeuralNet_main.cpp  SVM_main.cpp
examples/Classification/NeuralNet/: NeuralNet_main.cpp
examples/Classification/SVM/: SVM_main.cpp
examples/LP/Power/DCOPF/: CMakeLists.txt  DCOPF_main.cpp
examples/Lasserre/: lasserre.cpp  lasserre.hpp
examples/MILP/: Stable_Set.cpp  minkcut.cpp
examples/MILP/MinKPart/: MinKpartition.hpp  MinkPart_main.cpp  Minkmodel.cpp  Minkmodel.hpp  MkP_install.md
examples/MILP/StableSet/: Stable_Set_main.cpp
examples/MINLP/: Pooling_main.cpp
examples/MINLP/ACUC/: ACUCmodel.cpp
examples/MINLP/Power/: Bound.cpp  Bus.cpp  Bus.h  Conductor.cpp  Conductor.h  Gen.cpp  Gen.h  Line.cpp  Line.h  PowerNet.cpp  PowerNet.h
examples/MINLP/Power/ACOPF/: ACOPF_main.cpp
examples/MINLP/Power/ACUC/: ACUC.cpp  ACUC_main.cpp  ACUCmodel.hpp
examples/MINLP/Power/ACUC_decompose/: Partition.cpp  Partition.hpp  acuc_decompose.cpp
examples/MINLP/Power/ACUC_decompose_time/: acuc_decompose_time.cpp
examples/MINLP/Power/Decompose/: Decompose.cpp  functions.h  getdual.cpp
examples/MINLP/Power/Decompose2/: Decompose2.cpp  Partition.cpp  Partition.hpp
examples/MINLP/Power/Microgrid/: Microg_main.cpp
examples/MINLP/Power/Reform/: Reform_main.cpp
examples/MINLP/Power/SDPCHORDAL/: SDPCHORDAL_main.cpp
examples/MINLP/Power/SDPCUTS/: Bag.cpp  SDPCUTS_main.cpp
examples/MINLP/Power/SDPOPF/: Bag.cpp  Bag.h  SDPOPF_main.cpp
examples/MINLP/Power/SDPStatic/: SDPStatic_main.cpp
examples/MINLP/Power/SOCOPF/: SOCOPF_main.cpp
examples/MINLP/Power/global/: .Global.cpp.swp  Global.cpp  Global.hpp  Partition.cpp  Partition.hpp  global_main.cpp
examples/MINLP/Quantum/: Quantum_main.cpp
examples/MachineLearning/: DataSet.cpp  DataSet.h
examples/MachineLearning/AB-Crown/: CMakeLists.txt  MPSParser.cpp  MPSParser.hpp
examples/MachineLearning/GravityNN/: CMakeLists.txt  GravityNN.cpp  GravityNN.hpp  IndexContainer.hpp  Layers.hpp  NeuralNet.hpp  README.md  Tensor.hpp  ToDo.md  layers.hpp  onnx.hpp  onnx_init.py  requirements.txt  scenario.cpp  tighten.cpp  try2.cpp  types.hpp  utils.hpp
examples/MachineLearning/GravityNN/GravityNN_Preproc/: model_reader.py  vnnlib_parser.py
examples/MachineLearning/GravityNN/deprecated/: GravityNN.hpp
examples/MachineLearning/GravityNN/network/: IndexContainer.hpp  Layers.hpp  NeuralNet.hpp  Tensor.hpp  types.hpp
examples/MachineLearning/GravityNN/network/Layers/: Binary.hpp  Fusion.hpp  LayerBase.hpp  Layers.hpp  Linear.hpp  NonLinear.hpp  Shape.hpp  Unary.hpp
examples/MachineLearning/GravityNN/utils/: bound_file_reader.hpp  shape_iterator.hpp  subgraph_extraction.hpp  tightening.hpp  utils.hpp
examples/MachineLearning/ONNX/: CMakeLists.txt
examples/MachineLearning/Supervised/Classification/NeuralNets/: NeuralNet_main.cpp
examples/MachineLearning/Supervised/LiDAR/: BB.h  Branch_Bound.h  Goicp.h  Heuristics.h  IPH.h  LiDAR_main.cpp  Lidar_preprocess.h  Lidar_utils.h  Lower_Bound.h  README.md  convexes.h  icp.h  kdutils.h  spherical.h  vec.h
examples/NLP/Ising/: .rise.jl.swp  Ising_main.cpp
examples/NLP/Ising/Julia/: README.md  rise-p.jl  rise.jl  rise_reform.jl
examples/ONNX/: CMakeLists.txt  Layers.hpp  ONNX.cpp  data.hpp
examples/Optimization/Linear/Rostering/: Roster.hpp  Roster_main.cpp
examples/Optimization/MILP/SpaceTraffic/: Sensor_Assign.cpp  Sensor_Assign.hpp
examples/Optimization/MILP/StableSet/: Stable_Set_main.cpp
examples/Optimization/MILP/sensor_assign2/: Sensor_Assign2.cpp  Sensor_Assign2.hpp
examples/Optimization/MINLP/LABS/: LABS.cpp
examples/Optimization/MINLP/MISDP/: cbf-data.h  cbf-format.cpp  cbf-format.h  misdp.cpp  read_misdp.cpp  read_misdp.h
examples/Optimization/MINLP/MinKPart/: mink.cpp  mink_model.h
examples/Optimization/MINLP/Quantum/: Quantum_main.cpp
examples/Optimization/MINLP/RIP/: rip.cpp  rip_model.h
examples/Optimization/MINLP/SPOT/: SPOT_main.cpp
examples/Optimization/MISDP/CBF/: misdp.cpp  misdp_cbf.cpp  programmingstyle.h  read_misdp.h
examples/Optimization/MISDP/Laplacian/: Laplacian_main.cpp  misdp_lap.cpp
examples/Optimization/MISDP/RIP/: misdp_rip.cpp  rip_model.h
examples/Optimization/NonLinear/Pooling/: PoolNet.cpp  PoolNet.h  Pooling_main.cpp
examples/Optimization/NonLinear/Power/: Bound.cpp  Bound.h  Bus.cpp  Bus.h  Conductor.cpp  Conductor.h  Gen.cpp  Gen.h  GenCost.h  Line.cpp  Line.h  Net.h  PowerNet.cpp  PowerNet.h  PowerNet1.cpp
examples/Optimization/NonLinear/SpaceCraft/: SpaceCraft.cpp
solvers/: CMakeLists.txt
solvers/AlpineX/: AlpineX.cpp
src/: Arc.cpp  BonminProgram.cpp  Bound.cpp  Bus.cpp  CMakeLists.txt  ClpProgram.cpp  Complex.cpp  Conductor.cpp  ConfigMap.cpp  CplexCallback.cpp  CplexProgram.cpp  Gen.cpp  GurobiProgram.cpp  HiGHSProgram.cpp  IpoptProgram.cpp  Line.cpp  MosekProgram.cpp  MosekProgram.h  Net.cpp  Node.cpp  Path.cpp  PowerNet.cpp  PowerNode.cpp  Sdpa.cpp  SdpaProg.cpp  SdpaProg.h  StringTokenizer.cpp  constant (hh’s MacBook Air's conflicted copy 2016-10-18).cpp  constant.cpp  constraint.cpp  expr.cpp  func.cpp  jly_3ddt.cpp  jly_goicp.cpp  jly_main.cpp  main.cpp  matrix.cpp  model.cpp  param.cpp  poly.cpp  (+3 more)
(+505 files in other folders)
